# rmsnorm.torch

./: .gitignore  justfile  pyproject.toml  setup.py
.benchmarks/Linux-CPython-3.8-64bit/: 0001_baseline.json  0002_no-custom-kernel.json
docker/: Dockerfile.dev
rmsnorm/: __init__.py  cublas_helpers.h  rmsnorm_cuda.cpp  rmsnorm_cuda_kernel.cu
tests/: test_rmsnorm.py
