[tool.poetry]
name = "rmsnorm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.10.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
pylint = "^2.12.2"
numpy = "^1.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]

[tool.pylint.variables]
good-names = []

[tool.pylint.messages_control]
disable = []

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["rmsnorm", "tests"]
filterwarnings = [
    "ignore: Failed to initialize NumPy:UserWarning"
]
markers = []

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3